# LaValorant_dev

./: Procfile  docker-compose.yml  requirements.txt
.devcontainer/: devcontainer.json
Docs/: design.md  spec.md
workspace/: config.py  main.py  pyproject.toml  pytest.ini
workspace/api_clients/: riot_api_client.py
workspace/cogs/: rank_cog.py  recruitment_cog.py  utility_cog.py
workspace/db/: activity_log_repository.py  database.py  participant_repository.py  recruitment_repository.py  user_repository.py
workspace/public/: riot.txt
workspace/scheduler/: daily_tasks.py
workspace/services/: activity_service.py  rank_service.py  recruitment_service.py  user_service.py
workspace/tests/integration/: test_recruitment_repositories.py  test_user_repository.py
workspace/tests/services/: test_activity_service.py  test_rank_service.py  test_recruitment_service.py  test_user_service.py  update_all_user_ranks.py
workspace/views/: recruitment_modal.py  recruitment_view.py
workspace/web/: server.py
